--- a/sneha-portfolio/package.json
+++ b/sneha-portfolio/package.json
@@ -46,6 +46,9 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13"
   }
 }
