--- a/sneha-portfolio/package.json
+++ b/sneha-portfolio/package.json
@@ -49,6 +49,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "svgo": "^4.0.0",
     "tailwindcss": "^4.1.13"
   }
 }
