--- a/sneha-portfolio/package.json
+++ b/sneha-portfolio/package.json
@@ -19,10 +19,10 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
     "svgo": "^4.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.5.6"
   },
   "scripts": {
     "start": "react-scripts start",
