--- a/sneha-portfolio/package.json
+++ b/sneha-portfolio/package.json
@@ -4,10 +4,6 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "react": "^18.3.1",
@@ -17,33 +13,23 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^5.1.0"
   },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "svgo": "^4.0.0",
-    "tailwindcss": "^3.3.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.5.6"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "engines": {
-    "node": "20.x",
-    "npm": "10.x"
+  "eslintConfig": {
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.5.6",
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
