--- a/sneha-portfolio/.gitignore
+++ b/sneha-portfolio/.gitignore
@@ -1,21 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Node dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
 /coverage
 
-# misc
+# Misc
 .DS_Store
+
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-/.env
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
