--- a/sneha-portfolio/package.json
+++ b/sneha-portfolio/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@vercel/analytics": "^1.5.0",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "react": "^18.3.1",
